--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ pandas
 numpy
 xmltodict
 einops
-torch==1.7.0
-torchvision==0.8.1
-torchzq==1.0.6
+torch
+torchvision
+torchzq
 tensorboard
 imageio
